--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 Zarr writing.ipynb
@@ -788,7 +788,7 @@
     "# shape = (10, 5)\n",
     "shapes = [(100, 15), (95, 16)]\n",
     "# t, ch, fov, roi\n",
-    "for t in trange(13):\n",
+    "for t in trange(193):\n",
     "    s[t, \"CFP\", 8] = {\n",
     "        idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in range(num_rois)\n",
     "    }\n",
@@ -812,8 +812,24 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "s.flush()\n",
-    "q.poll()"
+    "chunks = (5, 4_000)\n",
+    "incomplete_chunks_axes = [False, True]\n",
+    "# chunks = (5,4)\n",
+    "q = delayed.DelayedQueue()\n",
+    "s = delayed.DelayedBatchedZarrStore(\n",
+    "    q,\n",
+    "    output_dir / \"test_store/ch={1}/fov={2}\",\n",
+    "    write_options=dict(chunks=chunks, incomplete_chunks_axes=incomplete_chunks_axes),\n",
+    ")\n",
+    "# shape = (100, 15)\n",
+    "# shape = (10, 5)\n",
+    "shapes = [(100, 15), (95, 16)]\n",
+    "# t, ch, fov, roi\n",
+    "for t in trange(6):\n",
+    "    s[t, \"CFP\", 8] = {idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in [1, 3]}\n",
+    "    s[t, \"YFP\", 8] = {idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in [1, 3]}\n",
+    "    s.write()\n",
+    "    q.poll()"
    ]
   },
   {
@@ -823,13 +839,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(s.value)"
+    "s.writers.keys"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.value.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "s.flush()\n",
+    "q.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,27 +889,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "z"
+    "z.info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "z[15, 3]"
+    "z[12, 3]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57",
+   "id": "60",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -870,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71",
+   "id": "74",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -1105,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122",
+   "id": "125",
    "metadata": {},
    "source": [
     "# Export"
@@ -1730,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1832,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1842,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1901,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "138",
    "metadata": {},
    "outputs": [],
    "source": [
