--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 FISH calling.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 FISH calling.ipynb
@@ -264,7 +264,7 @@
     "else:\n",
     "    parent_dir = nd2_filename.parent\n",
     "fish_filename = parent_dir / \"FISH/real_run\"\n",
-    "output_dir = parent_dir / \"1fov_partial3\"\n",
+    "output_dir = parent_dir / \"allfovs\"\n",
     "# output_dir.mkdir(exist_ok=True)"
    ]
   },
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(5)"
+    "cluster.scale(0)"
    ]
   },
   {
@@ -475,8 +475,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "delayed_ = False\n",
-    "# delayed_ = client\n",
+    "# delayed_ = False\n",
+    "delayed_ = client\n",
     "# def delayed_(func):\n",
     "#     def inner(*args, **kwargs):\n",
     "#         pass\n",
@@ -487,7 +487,7 @@
     "for msg in readers.send_nd2(\n",
     "    nd2_filename,\n",
     "    # slices=dict(v=[8], t=range(190, 192)),\n",
-    "    slices=dict(v=[35], t=range(81, 82)),\n",
+    "    slices=dict(v=[35], t=range(60, 84)),\n",
     "    # slices=dict(t=[80,85,90,91], v=[8]),\n",
     "    # slices=dict(t=range(88,92), v=[8]),\n",
     "    # slices=dict(t=[60,61], v=[8]),\n",
@@ -506,13 +506,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(nd2.get_frame_2D(t=83, v=35, c=1), scale=0.99, downsample=4)"
+    "# NO: 10, 18,"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(nd2.get_frame_2D(t=83, v=16, c=1), scale=0.99, downsample=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    preprocess_func(nd2.get_frame_2D(t=83, v=18, c=1)), scale=0.99, downsample=4\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = 180\n",
+    "for v in range(start, start + 10):\n",
+    "    display(\n",
+    "        display_image(\n",
+    "            preprocess_func(nd2.get_frame_2D(t=83, v=v, c=1)), scale=0.99, downsample=4\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,27 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.fish_crops._evicted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.fish_crops._write_queue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,25 +639,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
-   "metadata": {},
-   "source": [
-    "# Science analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "39",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "z = zarr.open_array(\n",
-    "    \"/home/jqs1/scratch/microscopy/240627/1fov_partial2/fish_crops/fov=35/channel=GFP/\",\n",
-    "    synchronizer=zarr.ProcessSynchronizer(\n",
-    "        \"/home/jqs1/scratch/microscopy/240627/1fov_partial2/fish_crops/fov=35/channel=GFP.lock\"\n",
-    "    ),\n",
-    ")"
+    "## Run all"
    ]
   },
   {
@@ -649,23 +652,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z.info"
+    "%%time\n",
+    "# delayed_ = False\n",
+    "delayed_ = client\n",
+    "# def delayed_(func):\n",
+    "#     def inner(*args, **kwargs):\n",
+    "#         pass\n",
+    "#     return inner\n",
+    "\n",
+    "num_fovs = nd2.sizes[\"v\"]\n",
+    "# num_fovs = 20\n",
+    "\n",
+    "p = pipeline.DefaultPipeline(output_dir, config=config, delayed=delayed_)\n",
+    "\n",
+    "for fov_num in tqdm(list(sorted(set(range(num_fovs)) - set([10, 18])))):\n",
+    "    for msg in readers.send_nd2(\n",
+    "        nd2_filename,\n",
+    "        # slices=dict(v=[fov_num], t=range(60, 84)),\n",
+    "        slices=dict(v=[fov_num]),\n",
+    "        send_metadata=False,\n",
+    "        delayed=delayed_,\n",
+    "    ):\n",
+    "        # print(\"FRAME\",msg[\"metadata\"])\n",
+    "        p.handle_message({**msg, \"image_type\": \"science\"})\n",
+    "    for msg in readers.send_eaton_fish(\n",
+    "        fish_filename,\n",
+    "        slices=dict(v=[fov_num]),\n",
+    "        delayed=delayed_,\n",
+    "    ):\n",
+    "        # print(\"FISH\",msg[\"metadata\"])\n",
+    "        p.handle_message({**msg, \"image_type\": \"fish_barcode\"})\n",
+    "p.handle_message({\"type\": \"done\"})\n",
+    "del msg"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "41",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "z.attrs"
+    "# Science analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# z = zarr.open_array(\n",
+    "#     \"/home/jqs1/scratch/microscopy/240627/1fov_partial2/fish_crops/fov=35/channel=GFP/\",\n",
+    "#     synchronizer=zarr.ProcessSynchronizer(\n",
+    "#         \"/home/jqs1/scratch/microscopy/240627/1fov_partial2/fish_crops/fov=35/channel=GFP.lock\"\n",
+    "#     ),\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = zarr.open_array(\n",
+    "    \"/home/jqs1/scratch/microscopy/240627/allfovs/crops/fov=0/channel=CFP-EM/\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!micromamba install -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.crop_to_mask(z[:, 400])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[:, 400].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92",
+   "id": "98",
    "metadata": {},
    "source": [
     "# Export"
@@ -1290,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
